--- a/pom.xml
+++ b/pom.xml
@@ -7,6 +7,9 @@
     <groupId>com.qf</groupId>
     <artifactId>sms_platform</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <modules>
+        <module>sms_platform_eureka</module>
+    </modules>
 
     <properties>
         <java.version>1.8</java.version>
