--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,7 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>sms_platform_eureka</module>
+        <module>sms_platform_configserver</module>
     </modules>
 
     <properties>
