Cache缓存模块搭建

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
         <module>sms_platform_eureka</module>
         <module>sms_platform_configserver</module>
         <module>sms_platform_common</module>
+        <module>sms_platform_cache</module>
     </modules>
 
     <properties>
