--- a/sms_platform_interface/pom.xml
+++ b/sms_platform_interface/pom.xml
@@ -43,6 +43,7 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
+            <version>1.18.14</version>
         </dependency>
 
         <dependency>
